--- a/env/roles/common/tasks/main.yml
+++ b/env/roles/common/tasks/main.yml
@@ -10,6 +10,9 @@
   apt: name=unzip state=present update_cache=yes
   become: True
 
+- name: Create the logs directory
+  file: path=~/logs state=directory
+
 - name: Add locale settings to .bashrc
   lineinfile: >
     dest={{ ansible_env.HOME }}/.bashrc
